Using forked chirpstack-openwrt-feed

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 	branch = openwrt-23.05
 [submodule "feeds/chirpstack-openwrt-feed"]
 	path = feeds/chirpstack-openwrt-feed
-	url = https://github.com/chirpstack/chirpstack-openwrt-feed.git
+	url = git@github.com:xoseperez/chirpstack-openwrt-feed.git
