--- a/conf/base_raspberrypi_bcm27xx_bcm2709/.config
+++ b/conf/base_raspberrypi_bcm27xx_bcm2709/.config
@@ -1717,6 +1717,7 @@ CONFIG_PACKAGE_chirpstack-concentratord=y
 CONFIG_PACKAGE_chirpstack-concentratord-2g4=y
 CONFIG_PACKAGE_chirpstack-concentratord-sx1301=y
 CONFIG_PACKAGE_chirpstack-concentratord-sx1302=y
+# CONFIG_PACKAGE_chirpstack-concentratord-target-rak7248 is not set
 # CONFIG_PACKAGE_chirpstack-concentratord-target-rak7267 is not set
 # CONFIG_PACKAGE_chirpstack-concentratord-target-rak7268v2 is not set
 # CONFIG_PACKAGE_chirpstack-concentratord-target-rak7289v2 is not set
@@ -4657,6 +4658,7 @@ CONFIG_PACKAGE_luci-app-chirpstack=y
 # CONFIG_PACKAGE_luci-app-chirpstack-apps is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-chirpstack is not set
 CONFIG_PACKAGE_luci-app-chirpstack-concentratord=y
+# CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7248 is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7267 is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7268v2 is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7289v2 is not set
