--- a/conf/full_raspberrypi_bcm27xx_bcm2708/.config
+++ b/conf/full_raspberrypi_bcm27xx_bcm2708/.config
@@ -1713,6 +1713,7 @@ CONFIG_PACKAGE_chirpstack-concentratord=y
 CONFIG_PACKAGE_chirpstack-concentratord-2g4=y
 CONFIG_PACKAGE_chirpstack-concentratord-sx1301=y
 CONFIG_PACKAGE_chirpstack-concentratord-sx1302=y
+# CONFIG_PACKAGE_chirpstack-concentratord-target-rak7248 is not set
 # CONFIG_PACKAGE_chirpstack-concentratord-target-rak7267 is not set
 # CONFIG_PACKAGE_chirpstack-concentratord-target-rak7268v2 is not set
 # CONFIG_PACKAGE_chirpstack-concentratord-target-rak7289v2 is not set
@@ -4531,6 +4532,7 @@ CONFIG_PACKAGE_luci-app-chirpstack=y
 CONFIG_PACKAGE_luci-app-chirpstack-apps=y
 CONFIG_PACKAGE_luci-app-chirpstack-chirpstack=y
 CONFIG_PACKAGE_luci-app-chirpstack-concentratord=y
+# CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7248 is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7267 is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7268v2 is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7289v2 is not set
