--- a/conf/rak_rak7267/.config
+++ b/conf/rak_rak7267/.config
@@ -1808,6 +1808,7 @@ CONFIG_PACKAGE_chirpstack-concentratord=y
 # CONFIG_PACKAGE_chirpstack-concentratord-2g4 is not set
 # CONFIG_PACKAGE_chirpstack-concentratord-sx1301 is not set
 CONFIG_PACKAGE_chirpstack-concentratord-sx1302=y
+# CONFIG_PACKAGE_chirpstack-concentratord-target-rak7248 is not set
 CONFIG_PACKAGE_chirpstack-concentratord-target-rak7267=y
 # CONFIG_PACKAGE_chirpstack-concentratord-target-rak7268v2 is not set
 # CONFIG_PACKAGE_chirpstack-concentratord-target-rak7289v2 is not set
@@ -4690,6 +4691,7 @@ CONFIG_PACKAGE_luci-app-chirpstack=y
 # CONFIG_PACKAGE_luci-app-chirpstack-apps is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-chirpstack is not set
 CONFIG_PACKAGE_luci-app-chirpstack-concentratord=y
+# CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7248 is not set
 CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7267=y
 # CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7268v2 is not set
 # CONFIG_PACKAGE_luci-app-chirpstack-concentratord-target-rak7289v2 is not set
