--- a/conf/rak_rak7268v2/.config
+++ b/conf/rak_rak7268v2/.config
@@ -1805,7 +1805,7 @@ CONFIG_PACKAGE_sudo=y
 #
 # CONFIG_PACKAGE_chirpstack is not set
 CONFIG_PACKAGE_chirpstack-concentratord=y
-# CONFIG_PACKAGE_chirpstack-concentratord-2g4 is not set
+CONFIG_PACKAGE_chirpstack-concentratord-2g4=y
 # CONFIG_PACKAGE_chirpstack-concentratord-sx1301 is not set
 CONFIG_PACKAGE_chirpstack-concentratord-sx1302=y
 # CONFIG_PACKAGE_chirpstack-concentratord-target-rak7267 is not set
